--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             <div class="avatar-container mb-8 animate-fade-in" style="animation-delay: 0.2s;">
                 <div class="rounded-lg overflow-hidden bg-white shadow-md">
-                    <img src="https://readdy.ai/api/search-image?query=Minimalist%20illustration%20portrait%20of%20a%20young%20woman%20with%20long%20hair%20wearing%20a%20turquoise%20beanie%20and%20orange%20jacket%2C%20simple%20line%20art%20style%20with%20soft%20pastel%20background%2C%20professional%20portfolio%20avatar&width=400&height=400&seq=1&orientation=squarish" alt="Myra Pillai" class="w-full h-auto">
+                    <img src="./public/image.jpg" alt="Myra Pillai" class="w-full h-auto">
                 </div>
             </div>
             
